<?xml version="1.0"?>
<package format="2">
  <name>px4_command</name>
  <version>0.0.0</version>
  <description>The px4_command package</description>

  <maintainer email="bingobin.lw@gmail.com">Bingo</maintainer>
  <author email="bingobin.lw@gmail.com">Bingo</author>
  <license>TODO</license>

  <url type="website">http://www.amovauto.com/</url>
  <url type="repository">https://gitee.com/bingobinlw/some.git</url>

 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
